added Firestore Implementation

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,14 +91,9 @@ stages:
 
           - template: .\devops\templates\dotnet-build.yaml
             parameters:
-              projPath: src/Umbrella.UserManagement
-              projName: Umbrella.UserManagement
-
-          # - template: .\devops\templates\dotnet-build.yaml
-          #   parameters:
-          #     projPath: src/Umbrella.Infrastructure.Cache.Tests
-          #     projName: Umbrella.Infrastructure.Cache.Tests
-          #     publishRequired: false
+              projPath: src/Umbrella.UserManagement.Tests
+              projName: Umbrella.UserManagement.Tests
+              publishRequired: false
 
           - task: SonarCloudAnalyze@1
             displayName: "Run Sonar Cloud Analysis"
@@ -143,6 +138,15 @@ stages:
             parameters:
               projPath: src/Umbrella.UserManagement
               projName: Umbrella.UserManagement
+              MajorVersion: ${{ parameters.MajorVersion }}
+              MinorVersion: ${{ parameters.MinorVersion }}
+              PatchVersion: ${{ parameters.PatchVersion }}
+              buildNumber: $(Build.BuildId)
+
+          - template: .\devops\templates\dotnet-package-pack.yaml
+            parameters:
+              projPath: src/Umbrella.UserManagement.Firestore
+              projName: Umbrella.UserManagement.Firestore
               MajorVersion: ${{ parameters.MajorVersion }}
               MinorVersion: ${{ parameters.MinorVersion }}
               PatchVersion: ${{ parameters.PatchVersion }}
