--- a/src/Umbrella.UserManagement.Tests/Umbrella.UserManagement.Tests.csproj
+++ b/src/Umbrella.UserManagement.Tests/Umbrella.UserManagement.Tests.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Umbrella.UserManagement.Firestore\Umbrella.UserManagement.Firestore.csproj" />
+  </ItemGroup>
+
 </Project>
