fix sonar issue

--- a/src/Umbrella.UserManagement.Firestore/Umbrella.UserManagement.Firestore.csproj
+++ b/src/Umbrella.UserManagement.Firestore/Umbrella.UserManagement.Firestore.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
-    <NoWarn>CS8600</NoWarn>
+    <NoWarn>CS8600;S112</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
