final checks before publish 1.0

--- a/src/Umbrella.UserManagement/Umbrella.UserManagement.csproj
+++ b/src/Umbrella.UserManagement/Umbrella.UserManagement.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <NoWarn>CS8600</NoWarn>
+    <NoWarn>CS8600;S112</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
