set up new project

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,14 +2,15 @@ trigger:
   branches:
     include:
       - main
-      - development
-    # exclude:
-    #   - release-candidate
-    #   - release-1.0
+    exclude:
+      - release-candidate
+
   paths:
     include:
       - src
     exclude:
+      - script/*
+      - libs/*
       - devops/*
 
 schedules:
@@ -19,147 +20,50 @@ schedules:
       include:
         - main
 
-pool:
-  vmImage: "ubuntu-latest"
+resources:
+  repositories:
+    # For type: github, name is <identity>/<repo> as in the examples above. For type: git (Azure Repos), name is <project>/<repo>.
+    - repository: coreTemplates
+      type: git
+      name: Umbrella/Umbrella.Devops
+      ref: refs/heads/main
+      endpoint: Garaproject
 
 parameters:
-  - name: MajorVersion
-    displayName: "Major Version"
-    default: 1
-  - name: MinorVersion
-    displayName: "Minor Version"
-    default: 1
-  - name: PatchVersion
-    displayName: "Patch Version"
-    default: 0
-  - name: authors
-    displayName: "Names of authors of the target package"
-    default: "FG"
-  - name: company
-    displayName: "Company that produces the target package"
-    default: "Innova Solutions"
-  - name: copyright
-    displayName: "Copyright"
-    default: "FG 2022-2023"
-  - name: SonarScanEnabled
+  - name: inputSonarScanEnabled
     displayName: "Enable Sonar Scan"
     type: boolean
     default: True
-  - name: PublishPackage
+  - name: inputPublishPackage
     displayName: "Publish Package to Nuget.Org"
     type: boolean
     default: False
 
-variables:
-  buildConfiguration: "Release"
-  targetFramework: "6.x"
-  packageId: Umbrella.UserManagement
-  nugetVersion: ${{ parameters.MajorVersion }}.${{ parameters.MinorVersion }}.${{ parameters.PatchVersion }}.$(Build.BuildId)
-  testReportFileName: cobertura.xml
-
-stages:
-  - stage: Build
-    jobs:
-      - job: CI
-        steps:
-          #### use the right version of .Net core
-          - task: UseDotNet@2
-            displayName: Use .NET CORE target version
-            inputs:
-              packageType: "sdk"
-              version: "6.x"
-
-          - template: .\devops\templates\dotnet-tool-install-coverlet.yaml
-
-          - task: SonarCloudPrepare@1
-            displayName: "Prepare analysis on SonarCloud"
-            inputs:
-              SonarCloud: "SonarCloud"
-              organization: "fgaravaglia"
-              scannerMode: "MSBuild"
-              projectKey: $(packageId)
-              projectName: $(packageId)
-              projectVersion: "${{ parameters.MajorVersion }}.${{ parameters.MinorVersion }}"
-              extraProperties: |
-                # Additional properties that will be passed to the scanner,
-                # Put one key=value per line, example:
-                sonar.exclusions=**/obj/**,**/*.dll,**/*.Tests/**,**/*.Tests/**/*.cs
-                sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
-                sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/$(testReportFileName)
-                sonar.cs.vscoveragexml.reportsPaths=coverage.xml
-            condition: eq(${{ parameters.SonarScanEnabled }}, true)
-
-          - template: .\devops\templates\dotnet-build.yaml
-            parameters:
-              projPath: src/Umbrella.UserManagement.Firestore
-              projName: Umbrella.UserManagement.Firestore
-              publishRequired: false
-
-          - task: SonarCloudAnalyze@1
-            displayName: "Run Sonar Cloud Analysis"
-            condition: eq(${{ parameters.SonarScanEnabled }}, true)
-
-          - task: SonarCloudPublish@1
-            displayName: "Publish Sonar Cloud Analysis"
-            inputs:
-              pollingTimeoutSec: "300"
-            condition: eq(${{ parameters.SonarScanEnabled }}, true)
-
-          ############################## PUBLISH DROP #################################
-          - task: PublishBuildArtifacts@1
-            displayName: publish artifacts
-            inputs:
-              PathtoPublish: "$(Build.ArtifactStagingDirectory)"
-              ArtifactName: "drop"
-              publishLocation: "Container"
-
-  - stage: PackAndPush
-    dependsOn: Build
-    condition: in(dependencies.Build.result, 'Succeeded', 'SucceededWithIssues')
-    jobs:
-      - job: NugetPush
-        steps:
-          - task: DownloadSecureFile@1
-            name: nugetOrgKey
-            displayName: "Download Nuget Api Key"
-            inputs:
-              secureFile: "Nuget.apikey.txt"
-              retryCount: "5"
-
-          - powershell: |
-              $key = Get-Content -Path $(nugetOrgKey.secureFilePath)
-              Write-Host "##vso[task.setvariable variable=ReadApiKey;]$key"
-            displayName: Get Nuget.org NugetApiKey
-
-          # - powershell: |
-          #     Write-Host "Key ==> $(ReadApiKey)"
-          #   displayName: Print Nuget.org NugetApiKey
-
-          - template: .\devops\templates\dotnet-package-pack.yaml
-            parameters:
-              projPath: src/Umbrella.UserManagement
-              projName: Umbrella.UserManagement
-              MajorVersion: ${{ parameters.MajorVersion }}
-              MinorVersion: ${{ parameters.MinorVersion }}
-              PatchVersion: ${{ parameters.PatchVersion }}
-              buildNumber: $(Build.BuildId)
-
-          - template: .\devops\templates\dotnet-package-pack.yaml
-            parameters:
-              projPath: src/Umbrella.UserManagement.Firestore
-              projName: Umbrella.UserManagement.Firestore
-              MajorVersion: ${{ parameters.MajorVersion }}
-              MinorVersion: ${{ parameters.MinorVersion }}
-              PatchVersion: ${{ parameters.PatchVersion }}
-              buildNumber: $(Build.BuildId)
-
-          - task: DotNetCoreCLI@2
-            displayName: Push to Nuget.org
-            inputs:
-              command: "custom"
-              custom: nuget
-              arguments: >
-                push $(Build.ArtifactStagingDirectory)/*.*.nupkg
-                -s https://api.nuget.org/v3/index.json
-                -k $(ReadApiKey)
-            condition: eq(${{ parameters.PublishPackage }}, true)
+extends:
+  template: dotnet-pakages-pipeline.1.2.yaml@coreTemplates
+  parameters:
+    MajorVersion: 1
+    MinorVersion: 5
+    PatchVersion: 0
+    SonarScanEnabled: ${{ parameters.inputSonarScanEnabled }}
+    SonarSettings:
+      ProjectKey: Umbrella.UserManagement
+      ProjectName: Umbrella.UserManagement
+      TestReportFileName: cobertura.xml
+    PublishPackage: ${{ parameters.inputPublishPackage }}
+    NugetSecretFileName: Nuget.apikey.txt
+    ListOfProjToBuild:
+      - path: src/Umbrella.UserManagement.Tests
+        name: Umbrella.UserManagement.Tests
+        publishRequired: false
+        isWebProj: False
+    ListOfProjToTest:
+      - path: src/Umbrella.UserManagement.Tests
+        name: Umbrella.UserManagement.Tests
+    ListOfProjToPublish:
+      - path: src/Umbrella.UserManagement
+        name: Umbrella.UserManagement
+      - path: src/Umbrella.UserManagement.Firestore
+        name: Umbrella.UserManagement.Firestore
+      - path: src/Umbrella.IdentityManagement
+        name: Umbrella.IdentityManagement
