--- a/src/Umbrella.UserManagement.Firestore/Umbrella.UserManagement.Firestore.csproj
+++ b/src/Umbrella.UserManagement.Firestore/Umbrella.UserManagement.Firestore.csproj
@@ -15,27 +15,18 @@
 
 <PropertyGroup>
   <PackageId>Umbrella.UserManagement.Firestore</PackageId>
-  <Version>0.1.0.0</Version>
-  <VersionNumber>0.1.0.0</VersionNumber>
-  <Company>Innova Solutions</Company>
-  <Authors>FG</Authors>
   <Description>Library to implement concrete components for UserManagement based on Google Firestore</Description>
-  <Copyright>FG 2022 - 2023</Copyright>
-  <PackageProjectUrl>https://github.com/fgaravaglia/Umbrella.UserManagement.Firestore</PackageProjectUrl>
+  <PackageProjectUrl>https://github.com/fgaravaglia/Umbrella.UserManagement</PackageProjectUrl>
   <PackageReadmeFile>README.md</PackageReadmeFile>
   <PackageLicenseFile>LICENSE</PackageLicenseFile>
   <RepositoryType>git</RepositoryType>
-  <RepositoryUrl>https://github.com/fgaravaglia/Umbrella.UserManagement.Firestore</RepositoryUrl>
-  <icon>umbrella_framework_icon.png</icon>
-  <PackageReleaseNotes>
-  </PackageReleaseNotes>
+  <RepositoryUrl>https://github.com/fgaravaglia/Umbrella.UserManagement</RepositoryUrl>
 </PropertyGroup>
 
 
   <ItemGroup>
     <None Include="..\..\README.md" Pack="true" PackagePath="" />
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
-    <None Include="..\..\images\umbrella_framework_icon.png" Pack="true" PackagePath="" />
 
   </ItemGroup>
 
